--- a/Inicio/style.css
+++ b/Inicio/style.css
@@ -1,14 +1,28 @@
 
+.html,body{
+  /* Para que funcione correctamente en Smartphones y Tablets */
+  height:100vh;
+}
 
+
+
+div.row{
+  margin-right: 0px;
+}
+
+div.container-fluid{
+  padding-right: 0px;
+}
 /*Nav bar*/
 nav{
-    width: 85%;
+    width: 100%;
     background-color:#6C5526;
     overflow: hidden;
     float: left;
     margin-top: 25px;
     margin-left: 50px;
     border-radius: 6px;
+    height: 55px;
 
 }
 
@@ -17,9 +31,8 @@ ul{
     margin: 0px 0px 0px 0px;
     list-style: none;
 }
-
-li{
-
+.nav-link{
+  margin-inline-end: 25px ; 
 }
 
 nav ul li a{
@@ -29,16 +42,6 @@ nav ul li a{
     font-family: Arial, Helvetica, sans-serif;
    
 }
-
-
-nav a:hover{
-   
-}
-
-.nav_link:hover{
-    
-}
-
 
 
 .head1{
@@ -59,7 +62,7 @@ nav a:hover{
 .contenedor_logo{
     position: absolute;
     border-radius: 50%;
-    margin-left: 43%;
+    margin-left: 48%;
     /* background-color: salmon; */
 }
 
@@ -67,6 +70,8 @@ nav a:hover{
     margin-top: 5px;
     border-radius: 50%;
     height: 200px;
+    width: 300px;
+    height: 250px;
 }
 
 /* Titulo */
@@ -133,91 +138,172 @@ nav a:hover{
 
 /* Overline From Left */
 .hvr-overline-from-left {
-    display: inline-block;
-    vertical-align: middle;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    position: relative;
-    overflow: hidden;
-  }
-  .hvr-overline-from-left:before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    left: 0;
-    right: 100%;
-    top: 0;
-    background: #f0932b;
-    height: 4px;
-    -webkit-transition-property: right;
-    transition-property: right;
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-timing-function: ease-out;
-    transition-timing-function: ease-out;
-  }
-  .hvr-overline-from-left:hover:before, .hvr-overline-from-left:focus:before, .hvr-overline-from-left:active:before {
-    right: 0;
-  }
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  overflow: hidden;
+}
+.hvr-overline-from-left:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  right: 100%;
+  top: 0;
+  background: #f0932b;
+  height: 4px;
+  -webkit-transition-property: right;
+  transition-property: right;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-overline-from-left:hover:before, .hvr-overline-from-left:focus:before, .hvr-overline-from-left:active:before {
+  right: 0;
+}
 
 /* Sweep To Right */
 
-  .hvr-sweep-to-right {
-    display: inline-block;
-    vertical-align: middle;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    position: relative;
-    -webkit-transition-property: color;
-    transition-property: color;
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-  }
-  .hvr-sweep-to-right:before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: #f0932b;
-    -webkit-transform: scaleX(0);
-    transform: scaleX(0);
-    -webkit-transform-origin: 0 50%;
-    transform-origin: 0 50%;
-    -webkit-transition-property: transform;
-    transition-property: transform;
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-timing-function: ease-out;
-    transition-timing-function: ease-out;
-    border-radius: 20px;
-  }
-  .hvr-sweep-to-right:hover, .hvr-sweep-to-right:focus, .hvr-sweep-to-right:active {
-    color: white;
-  }
-  .hvr-sweep-to-right:hover:before, .hvr-sweep-to-right:focus:before, .hvr-sweep-to-right:active:before {
-    -webkit-transform: scaleX(1);
-    transform: scaleX(1);
-  }
- /* Grow*/
-  .hvr-grow {
-    display: inline-block;
-    vertical-align: middle;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-property: transform;
-    transition-property: transform;
-  }
-  .hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
-  }
+.hvr-sweep-to-right {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+.hvr-sweep-to-right:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #f0932b;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transform-origin: 0 50%;
+  transform-origin: 0 50%;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+  border-radius: 20px;
+}
+.hvr-sweep-to-right:hover, .hvr-sweep-to-right:focus, .hvr-sweep-to-right:active {
+  color: white;
+}
+.hvr-sweep-to-right:hover:before, .hvr-sweep-to-right:focus:before, .hvr-sweep-to-right:active:before {
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+/* Grow*/
+.hvr-grow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
 
- 
+
+@media screen and (max-width: 700px){
+  nav{
+    width: 100%;
+    background-color:#6C5526;
+    overflow: hidden;
+    float: left;
+    margin-top: 25px;
+    margin-left: 0px;
+    border-radius: 6px;
+
+}
+.contenedor_logo{
+  position: absolute;
+  margin-left: 4vh;
+}
+
+.logo{
+  margin-top: 20px;
+  border-radius: 50%;
+  height: 200px;
+}
+
+/* Titulo */
+
+.contenedor_titulo{
+  position: absolute;
+  margin-left: 5px;
+  margin-top: 230px;
+  animation: slideInRight;
+  animation-duration: 2s;
+}
+
+
+
+.titulo{
+  font-size: 85px;
+  font-weight: bold;
+  color: #856A19;
+  font-style: italic;
+}
+
+
+
+/* Texto introducción*/
+.contenedor_info{
+  position: absolute;
+  margin-left: 150px;
+  margin-top: 250px;
+  /* background-color: royalblue; */
+  animation: slideInRight;
+  animation-duration: 2s;
+}
+.texto{
+  font-size: 20px;
+  color: #856A19;
+  
+}
+
+.contenedor_boton{
+  position: absolute;
+  margin-left: 55%;
+  margin-top: 350px;
+  /* background-color: royalblue; */
+  animation: fadeInUpBig;
+  animation-duration: 2s;
+}
+
+.boton{
+  background-color: cornsilk;
+  border-radius: 20px;
+  padding: 8px;  
+  font-size: 20px;
+  color: black;
+  text-decoration: none;
+  
+}
+
+
+
+
+
