--- a/Contactenos/style.css
+++ b/Contactenos/style.css
@@ -47,6 +47,8 @@ font-size: 18px;
 .mapa{
   width: 100%;
   height: 100%;
+  animation: fadeInRight;
+  animation-duration: 2s;
 }
 
 
@@ -61,6 +63,8 @@ font-size: 18px;
   border-radius: 8px;
   height: 100%;
   border: 1px solid black;
+  animation: fadeInLeft;
+  animation-duration: 2s;
 }
 
 
