--- a/Menu/bebidas/style.css
+++ b/Menu/bebidas/style.css
@@ -1,5 +1,5 @@
 .head0{
-    background: url(/imagenes/fondo_pestañas.jpg);
+    background: url(../../imagenes/fondo_pestañas.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -113,7 +113,6 @@ nav ul li a{
       background-color:#bfd8bd;
       opacity:0;
       transition:0.3s;
-    
     }
   
     .texto_servicio{
@@ -121,6 +120,8 @@ nav ul li a{
       align-content: center;
       font-family: 'kurri_island_caps_personalTh';
       font-size: 3vh;
+      text-align: justify;
+      margin-top: 10px;
   }
 
   .texto_servicio0{
@@ -174,19 +175,28 @@ nav ul li a{
     .c-img:hover .texto_servicio {
         margin-top: 30px;
     }
-  
+
+    .imagbatidos{
+      margin: 3px;
+      max-width: 300px;
+      max-height: 400px;
+      box-shadow: 5px 7px 5px -3px black;
+    }
+
     .boton{
       background-color: rgb(119, 191, 163, 0.8);
-      margin-left: 38%;
       border: 1px solid #000000;
     }
 
     .boton2{
       background-color: rgb(119, 191, 163, 0.8);
-      margin-left: 32%;
       border: 1px solid #000000;
     }
 
+    .botonshadow{
+      box-sizing: content-box; 
+      box-shadow: 5px 7px 5px -3px black;
+    }
 
     .footer{
       background-color: black;
