--- a/Menu/cafeteria/style.css
+++ b/Menu/cafeteria/style.css
@@ -2,7 +2,7 @@
 
 
 .head0{
-    background: url(/imagenes/fondo_pestañas.jpg);
+    background: url(../../imagenes/fondo_pestañas.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -119,17 +119,20 @@ nav ul li a{
       color: #000000;
       align-content: center;
       font-family: 'kurri_island_caps_personalTh';
-      font-size: 4vh;
-      margin-top: 30px;
+      font-size: 3vh;
+      text-align: justify;
+      margin-top: 20px;
   }
   
     .titulo_servicio{
-        position: relative;
-        text-align: center; /* centro el texto*/
-        font-style: italic; 
-        font-size: 6vh;
-        font-family: kurri_island_caps_personalTh;
-        color: #000;
+      position: relative;
+      text-align: center; /* centro el texto*/
+      font-style: italic; 
+      font-size: 5vh;
+      font-family: kurri_island_caps_personalTh;
+      color: #000;
+      margin-top: 0px;
+      margin-bottom: 20px;
     }
    
    
