arreglo box quienes somos

--- a/Inicio/style.css
+++ b/Inicio/style.css
@@ -44,7 +44,7 @@ nav ul li a{
     margin: 0px;
    
     min-height: 100vh;
-    background: url(../imagenes/fondooficial.jpg);
+    background: url(../imagenes/portada_cortezas.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
