--- a/Contactenos/style.css
+++ b/Contactenos/style.css
@@ -9,13 +9,13 @@
 
 
 nav{
-    width: 41%;
+    width: 59%;
     /* background-color:#6C5526; */
     background-color: rgb(119, 191, 163, 0.8);
     margin-top: 25px;
     margin-left: 50px;
     border-radius: 6px;
-  
+    max-width: 570px; 
   }
   
   ul{
@@ -69,7 +69,7 @@ font-size: 18px;
 
 .foto{
   width: 100%;
-  margin-left: ;
+  border-radius: 5%;
 }
 
 .boton2{
