--- a/Nosotros/style.css
+++ b/Nosotros/style.css
@@ -40,7 +40,7 @@ nav ul li a{
 
 .logo{
   margin-left: 28%;
-  width: 45%;/*80vh;*/
+  width: 35%;/*80vh;*/
 }
 
 .caja_logo{
@@ -91,8 +91,10 @@ nav ul li a{
 }
 
 .mision{
-  border-radius: 40%;
-  max-width:95%;
+  border-radius: 60%;
+  max-width:80%;
+  opacity: 90%;
+  margin: 20px;
 }
 
 .svg{
