navbar and background fixed

--- a/Inicio/style.css
+++ b/Inicio/style.css
@@ -14,13 +14,13 @@ div.container-fluid{
 /*Nav bar*/
 nav{
 
-  width: 100%;
+  width: 80%;
     /* background-color:#6C5526; */
     background-color:#6C5526;
     margin-top: 25px;
-    margin-left: 50px;
+    margin-left: 20px;
     border-radius: 6px;
-    max-width: 800px; 
+    max-width: 550px; 
 }
 
 ul{
@@ -59,6 +59,8 @@ nav ul li a{
     /*background-size: cover;*/
     background-position:center;
     /*background-attachment: fixed;*/
+    height: 100%;
+    
     
 }
 
